overflow for scroll wheel fixed, will add error page next

--- a/frontend/src/components/ChatContent/ChatContent.scss
+++ b/frontend/src/components/ChatContent/ChatContent.scss
@@ -1,4 +1,4 @@
-// .contents {
-//   // overflow: auto;
-//   height: 300px;
-// }
+.contents {
+  // overflow: auto;
+  height: 300px;
+}
